# cookiecutter-microservices-template

./: .gitignore  .session-state.json  CLAUDE.md  README.md  Taskfile.yml  cookiecutter.json
.claude/: env.sh
hooks/: pre_gen_project.py
logs/: status_line.json
tests/: test_api_architecture_documentation.py  test_argocd_applicationset.py  test_cookiecutter_manifest.py  test_deployment_documentation.py  test_docker_build.py  test_docker_compose.py  test_docker_compose_execution.py  test_dockerfile.py  test_e2e_template_validation.py  test_github_actions_workflow.py  test_helm_chart.py  test_helm_configmap_pvc.py  test_helm_helpers.py  test_helm_rendering.py  test_helm_service.py  test_helm_statefulset.py  test_helm_values.py  test_language_guides_documentation.py  test_language_stubs.py  test_makefile.py  test_pre_gen_validation.py  test_setup_documentation.py
{{ cookiecutter.service_slug }}/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  GO.md  Makefile  NODEJS.md  PYTHON.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md  docker-compose.yml  go.mod  main.go  package.json  pyproject.toml
{{ cookiecutter.service_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.service_slug }}/argocd/: applicationset.yaml
{{ cookiecutter.service_slug }}/helm/: Chart.yaml  values.yaml
{{ cookiecutter.service_slug }}/helm/templates/: _helpers.tpl  configmap.yaml  pvc.yaml  service.yaml  statefulset.yaml
{{ cookiecutter.service_slug }}/src/: index.js
{{ cookiecutter.service_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py  main.py
(+17 files in other folders)
